--- a/page-parts/parts.html
+++ b/page-parts/parts.html
@@ -40,7 +40,7 @@
         <div class="container">
           <div class="header_block-logo">
             <div class="block_logo-name">
-              <a href="../main.html"><img src="../images/header/logo.svg" width="70" height="23"></a>
+              <a href="../index.html"><img src="../images/header/logo.svg" width="70" height="23"></a>
               <h3 class="name-organization">ЄВРО ПАРТС ЗАХІД</h3>
               <span class="logo_block-hr"></span>
             </div>
@@ -82,7 +82,7 @@
               </label>
 
               <div class="wrapper_menu">
-                <a href="../main.html" class="wrapper_menu-link">ГОЛОВНА</a>
+                <a href="../index.html" class="wrapper_menu-link">ГОЛОВНА</a>
                 <a href="./parts.html" class="wrapper_menu-link"
                   >КАТАЛОГ ТОВАРІВ</a
                 >
@@ -102,7 +102,7 @@
           <div class="header-block-menu">
             <ul class="header_menu-list">
               <li class="header_menu-item">
-                <a class="header_menu-link" href="../main.html">ГОЛОВНА</a>
+                <a class="header_menu-link" href="../index.html">ГОЛОВНА</a>
               </li>
               <li class="header_menu-item">
                 <a class="header_menu-link" href="./parts.html"
@@ -279,7 +279,7 @@
 
           <ul class="footer_list_link-pages">
             <li class="footer_item-pages">
-              <a class="footer_link-pages" href="../main.html">ГОЛОВНА</a>
+              <a class="footer_link-pages" href="../index.html">ГОЛОВНА</a>
             </li>
             <li class="footer_item-pages">
               <a class="footer_link-pages" href="./parts.html"
