--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
         <div class="container">
           <div class="service_block-inform">
             <div class="wrapper_service_block-text">
-              <h2 class="service_inform-tittle">Про сервіс</h2>
+              <h2 class="service_inform-tittle">Сервіс Маніту</h2>
 
               <p class="service_inform-text-one">
                 Наша сервісна бригада готова до виїзду на локацію з асортиментом
@@ -387,7 +387,7 @@
         <div class="container">
           <div class="wrapper_container-min-width">
             <div class="left-block">
-              <h3 class="parts-title">Запчастини</h3>
+              <h3 class="parts-title">Запчастини Маніту</h3>
               <p class="parts-text-top">В наявності більше 1000 запчастин.</p>
               <p class="parts-text-bottom">
                 Ви можете самостійно їх забрати з нашого офіс-складу, або ми
