--- a/page-parts/parts.html
+++ b/page-parts/parts.html
@@ -139,7 +139,7 @@
           </div>
           <div class="js-wrapper">
             <div class="wrapper_block-inform">
-              <h2 class="block_inform_parts-title">Запчастини</h2>
+              <h2 class="block_inform_parts-title">Запчастини Маніту</h2>
               <p class="block_inform_parts-text">Наші кваліфіковані менеджери завжди готові порадити та допомогти клієнтам у виборі необхідних запчастин.</p>
               <p class="block_inform_parts-text-two">Наші кваліфіковані менеджери завжди готові порадити та допомогти клієнтам у виборі необхідних запчастин. Ми розуміємо, що кожен клієнт має свої унікальні потреби та бюджет, тому ми докладаємо максимум зусиль, щоб знайти оптимальне рішення та допомогти зекономити кошти.</p>
               <button class="block_inform_parts-btn">дізнатися ціну та наявність</button>
