--- a/page-sirvice/service.html
+++ b/page-sirvice/service.html
@@ -200,7 +200,7 @@
       <section class="service-inform">
         <div class="container">
           <div class="wrapper_inform">
-            <h2 class="service_title">Про сервіс</h2>
+            <h2 class="service_title">Сервіс Маніту</h2>
             <p class="service_inform-text-one">
               Наші бригади складаються з двох висококваліфікованих інженерів,
               які швидко та ефективно вирішують будь-які проблеми на місці у
