--- a/index.html
+++ b/index.html
@@ -460,7 +460,7 @@
                       </li>
                       <li class="item_contact-phone">
                         <a class="contact-phone" href="tel:+380973659562"
-                          >+380 (97) 365 95 62 Гол.бугалтер Ірина</a
+                          >+380 (97) 365 95 62 Гол.бухгалтер Ірина</a
                         >
                       </li>
                       <li class="item_contact-phone">
