--- a/page-contact/contact.html
+++ b/page-contact/contact.html
@@ -30,6 +30,8 @@
     <link rel="stylesheet" href="../css/reset.css" />
     <link rel="stylesheet" href="./contact-css/contact.css" />
     <script type="module" src="./java-script/main-contact.js" defer></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=AW-16474244921"></script> <script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'AW-16474244921'); </script>
+    <script> gtag('event', 'conversion', {'send_to': 'AW-16474244921/LJ50CIX51JYZELmOxK89'}); </script>
     <title>ЄВРО ПАРТС ЗАХІД</title>
   </head>
   <body>
