--- a/page-parts/parts.html
+++ b/page-parts/parts.html
@@ -29,6 +29,8 @@
       rel="stylesheet" />
       <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js" defer></script>
     <script type="module" src="./java-script/main-parts.js" defer></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=AW-16474244921"></script> <script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'AW-16474244921'); </script>
+    <script> gtag('event', 'conversion', {'send_to': 'AW-16474244921/LJ50CIX51JYZELmOxK89'}); </script>
     <title>ЄВРО ПАРТС ЗАХІД</title>
   </head>
   <body>
