--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
       src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"
       defer></script>
     <script type="module" src="./java-script/main.js" defer></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=AW-16474244921"></script> <script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'AW-16474244921'); </script>
+    <script> gtag('event', 'conversion', {'send_to': 'AW-16474244921/LJ50CIX51JYZELmOxK89'}); </script>
     <title>Євро Партс Захід</title>
   </head>
   <body>
